@@ -1,7 +1,7 @@
 //
 // StreamCopier.h
 //
-// $Id: //poco/1.4/Foundation/include/Poco/StreamCopier.h#1 $
+// $Id: //poco/1.4/Foundation/include/Poco/StreamCopier.h#2 $
 //
 // Library: Foundation
 // Package: Streams
@@ -43,6 +43,7 @@
 #include "Poco/Foundation.h"
 #include <istream>
 #include <ostream>
+#include <cstddef>
 
 
 namespace Poco {
@@ -53,20 +54,50 @@ class Foundation_API StreamCopier
 	/// into another.
 {
 public:
-    static std::streamsize copyStream(std::istream& istr, std::ostream& ostr, unsigned bufferSize = 8192);
+    static std::streamsize copyStream(std::istream& istr, std::ostream& ostr, std::size_t bufferSize = 8192);
 		/// Writes all bytes readable from istr to ostr, using an internal buffer.
 		///
 		/// Returns the number of bytes copied.
+
+#if defined(POCO_HAVE_INT64)
+    static Poco::UInt64 copyStream64(std::istream& istr, std::ostream& ostr, std::size_t bufferSize = 8192);
+		/// Writes all bytes readable from istr to ostr, using an internal buffer.
+		///
+		/// Returns the number of bytes copied as a 64-bit unsigned integer.
+		///
+		/// Note: the only difference to copyStream() is that a 64-bit unsigned
+		/// integer is used to count the number of bytes copied.
+#endif
 
     static std::streamsize copyStreamUnbuffered(std::istream& istr, std::ostream& ostr);
 		/// Writes all bytes readable from istr to ostr.
 		///
 		/// Returns the number of bytes copied.
 
-    static std::streamsize copyToString(std::istream& istr, std::string& str, unsigned bufferSize = 8192);
+#if defined(POCO_HAVE_INT64)
+    static Poco::UInt64 copyStreamUnbuffered64(std::istream& istr, std::ostream& ostr);
+		/// Writes all bytes readable from istr to ostr.
+		///
+		/// Returns the number of bytes copied as a 64-bit unsigned integer.
+		///
+		/// Note: the only difference to copyStreamUnbuffered() is that a 64-bit unsigned
+		/// integer is used to count the number of bytes copied.
+#endif
+
+    static std::streamsize copyToString(std::istream& istr, std::string& str, std::size_t bufferSize = 8192);
 		/// Appends all bytes readable from istr to the given string, using an internal buffer.
 		///
 		/// Returns the number of bytes copied.
+
+#if defined(POCO_HAVE_INT64)
+    static Poco::UInt64 copyToString64(std::istream& istr, std::string& str, std::size_t bufferSize = 8192);
+		/// Appends all bytes readable from istr to the given string, using an internal buffer.
+		///
+		/// Returns the number of bytes copied as a 64-bit unsigned integer.
+		///
+		/// Note: the only difference to copyToString() is that a 64-bit unsigned
+		/// integer is used to count the number of bytes copied.
+#endif
 };
 
 
